# Como_Estructurar_Tus_Proyectos

./: README.md
casos-estudio/: Google Dataflow .md  Netflix.md  OpenIA.md  airbnb.md  analisis-comparativo-monorepos.md  microsoft.md  open-source-foundation.md  spotify-data-platform.md
docs/: buenas-practicas-git.md  control-acceso.md  convenciones-nombres.md  documentacion-viva.md  estructura-carpetas.md  flujos-ramas-git.md  flujos-trabajo-equipo.md  gestion-issues-y-prs.md  mantenimiento-largo-plazo.md  modularidad-y-escalabilidad.md  patrones-repo-industria.md  principios-arquitectonicos.md  principios-basicos.md  seguridad-codigo.md  versionado-semver.md  workflows-github.md
ejemplos/: backend-python.md  data-engineering-pipeline.md  estructura-microservicios.md  frontend-react.md  fullstack-monorepo.MD  machine-learning-pipeline.md  terraform-infra.md
plantillas/: .gitignore.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md
plantillas/config/: mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
por-dominio/: backend.md  ciencia-datos.md  cli-herramientas.md  devtools-python.md  frontend.md  fullstack.md  ingenieria-datos.md  ml-ops.md  proyectos-desktop.md  proyectos-documentacion.md
workflows/: build-docs.yml  ci-node.yml  ci-python.yml  lint-frontend.yml  release-tagging.yml  test-notebooks.yml
